评论列表临时提交

--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div th:include="fragment::navbar"></div>
-<div class="container padding-top50 bg-white">
+<div class="container padding-top50 bg-white maxWidth650">
     <div class="text-center">
         <h4 th:text="${form.title}"></h4>
     </div>
@@ -32,28 +32,33 @@
         <p th:utext="${form.content}"></p>
     </div>
 </div>
-<div class="container" ng-app="commentApp">
+<div class="container maxWidth650" style="padding: 2em 0em;" ng-app="commentApp">
     <div ng-controller="commentController">
+        <p style="color: #fad6a6;">评论（{{comments.length}}）</p>
+        <hr class="bg-faded">
         <div ng-repeat="comment in comments track by $index">
-            <div class="col-md-3">
-                <img ng-src="comment.user.avatar" class="width40 height40 borderRadius50">
-            </div>
-            <div class="col-lg-9">
-                <div class="height20">
-                    <label class="width50">{{comment.user.name}}</label><small class="text-muted">{{comment.createdTime | date:'yyyy/MM/dd HH:mm'}}</small>
+            <div class="row" style="margin:1em 0em;padding-bottom:1em;border-bottom: dashed 0.1em #866667;">
+                <div class="col-md-1">
+                    <img ng-src="comment.user.avatar" class="width40 height40 borderRadius50">
                 </div>
-                <div>
-                    <p>{{comment.content}}</p>
+                <div class="col-lg-11">
+                    <div class="height20">
+                        <label class="width20" style="color: #a1bad0;">{{comment.user.name}}</label><small class="text-muted" style="color: #866667">{{comment.createdTime | date:'yyyy/MM/dd HH:mm'}}</small>
+                    </div>
+                    <div>
+                        <p style="color: white;">{{comment.content}}</p>
+                    </div>
                 </div>
+                <div class="clearfix"></div>
             </div>
         </div>
-        <div>
-            <form>
+        <div class="bg-white">
+            <form name="commentForm">
             <div>
-                <textarea rows="3" class="form-control" ng-maxlength="500" ng-model="$scope.newComment.content"></textarea>
+                <textarea rows="3" class="form-control" ng-maxlength="500" placeholder="你的评论……" required ng-model="newComment.content"></textarea>
             </div>
             <div>
-                <button type="button" class="btn btn-info" ng-click="saveComment()">发表</button>
+                <button type="button" class="btn bg-warning width50" ng-disabled="commentForm.$invalid" ng-click="saveComment()">发表</button>
             </div>
             </form>
         </div>
@@ -72,23 +77,24 @@
             size:500,
             targetType:targetType,
             targetId:targetId
-        }}).success(function (data) {
+        }}).success(function (data) {console.log(data.data.content);
             if(data.code) {
-                $scope.comments = data.contents;
+                $scope.comments = data.data.content;
             }else{
                 Tooltip.fail(data.msg);
             }
         });
 
+        $scope.newComment = {
+            targetType: targetType,
+            targetId: targetId,
+            content: ''
+        };
         $scope.saveComment = function () {
-            $scope.newComment = {
-                targetType: targetType,
-                targetId: targetId,
-                content: ''
-            };
               $http.post('/comment/add',$scope.newComment).success(function (data) {
                   if(data.code) {
-
+                      $scope.comments.push(data.data);
+                      $scope.newComment.content = '';
                   }else {
                       Tooltip.fail(data.msg);
                   }
