--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -13,6 +13,7 @@
 .width400{width: 40em;}
 .width500{width: 50em;}
 .width550{width: 55em;}
+.width650{width: 65em;}
 .width700{width: 70em;}
 .maxWidth100{max-width: 10em;}
 .maxWidth150{max-width: 15em;}
@@ -21,6 +22,7 @@
 .maxWidth300{max-width: 30em;}
 .maxWidth400{max-width: 40em;}
 .maxWidth500{max-width: 50em;}
+.maxWidth650{max-width: 65em !important;}
 .maxWidth700{max-width: 70em;}
 .maxWidth800{max-width: 80em;}
 .maxWidth1000{max-width: 100em;}
@@ -90,6 +92,7 @@
 .inputLabel{border-left: solid #a1bad0;padding-left: 0.5em;line-height: 1.6em;color: #f3e8d6;}
 .textGrey{color: grey;}
 .textBlack{color: black;}
+.textWhite{color: white;}
 .borderNone{border: none;}
 body{
     font-size: 62.5%;
