--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -56,6 +56,7 @@
 .margin-left50{margin-left: 5em;}
 .margin-left20{margin-left: 2em;}
 .margin-left10{margin-left: 1em;}
+.margin-left5{margin-left: 0.5em;}
 .margin-right20{margin-right: 2em;}
 .margin-right10{margin-right: 1em;}
 .margin-top5{margin-top: 0.5em;}
